--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,5 +22,8 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
+    - name: Install Playwright Dependencies
+      run: npx playwright install
+      
     - name: Run Playwright tests
       run: npx playwright test
