--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    - name: Install Playwright Dependencies
-      run: npx playwright install
-      
+    - name: Install Playwright Dependencies With Browsers
+      run: npx playwright install --with-deps
+
     - name: Run Playwright tests
       run: npx playwright test
